m439c 热修：common踩Java19+API——GcAccount的Thread.threadId()被release17拒收（ci-retro-errors回推首战即中）；零行为对位getId()同值自古有21上仅弃用警告；教训=库API楼层手抄名单挂一漏万退役，1.20.1作业release17真编译器自此兼职common楼层闸；本地javac --release 17全量编common过（零MC依赖不吃噪音可本地验）；热修不抬版本